@@ -69,22 +69,6 @@ name|hbase
 operator|.
 name|filter
 operator|.
-name|Filter
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hbase
-operator|.
-name|filter
-operator|.
 name|RowFilterInterface
 import|;
 end_import
@@ -207,16 +191,13 @@ name|rowComparator
 operator|=
 name|rowComparator
 expr_stmt|;
-comment|// shouldn't this be ScanDeleteTracker?
 name|this
 operator|.
 name|deletes
 operator|=
 operator|new
 name|ScanDeleteTracker
-argument_list|(
-name|rowComparator
-argument_list|)
+argument_list|()
 expr_stmt|;
 name|this
 operator|.
@@ -709,6 +690,14 @@ return|;
 block|}
 if|if
 condition|(
+operator|!
+name|this
+operator|.
+name|deletes
+operator|.
+name|isEmpty
+argument_list|()
+operator|&&
 name|deletes
 operator|.
 name|isDeleted
