@@ -462,6 +462,7 @@ Release 0.20.0 - Unreleased
                Scan (Jon Gray via Nitay)
    HBASE-1640  Allow passing arguments to jruby script run when run by bin/hbase shell
    HBASE-698   HLog recovery is not performed after master failure
+   HBASE-1643  ScanDeleteTracker takes comparator but it unused
 
   OPTIMIZATIONS
    HBASE-1412  Change values for delete column and column family in KeyValue
